--- a/crates/affinidi-tdk/common/affinidi-data-integrity/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-data-integrity/Cargo.toml
@@ -13,13 +13,26 @@ publish.workspace = true
 rust-version.workspace = true
 
 [dependencies]
+affinidi-tdk-common.workspace = true
 base64 = "0.22"
 ed25519-dalek = "2.1"
 multibase = "0.9"
 serde = { version = "1.0", features = ["derive", "rc"] }
+serde_json = "1.0"
 serde_json_canonicalizer = "0.3.0"
 sha2 = "0.10"
+ssi = "0.11"
 thiserror = "2.0"
+tracing = { version = "0.1", features = [
+  "max_level_debug",
+  "release_max_level_info",
+] }
+tracing-subscriber = { version = "0.3", features = [
+  "env-filter",
+  "fmt",
+  "json",
+  "valuable",
+] }
 unsigned-varint = "0.8"
 
 [dev-dependencies]
