--- a/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
@@ -16,6 +16,7 @@ rust-version.workspace = true
 ahash = "0.8"
 base64 = "0.22"
 multibase = "0.9"
+multihash = "0.19"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 ssi = { version = "0.11" }
