--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,14 @@ members = [
   "crates/affinidi-did-resolver/affinidi-did-resolver-cache-server",
   "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-example",
   "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-peer",
+  "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh",
 
   "crates/affinidi-tdk/common/affinidi-secrets-resolver",
 
   "crates/affinidi-messaging/affinidi-messaging-didcomm",
 
   "crates/affinidi-tdk/common/affinidi-tdk-common",
+  "crates/affinidi-tdk/common/affinidi-data-integrity",
   "crates/affinidi-tdk/common/affinidi-did-authentication",
 
   "crates/affinidi-messaging/affinidi-messaging-sdk",
@@ -39,24 +41,26 @@ publish = true
 rust-version = "1.85.0"
 
 [workspace.dependencies]
-affinidi-did-resolver-cache-sdk = { version = "0.5.3", path = "crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk", features = [
+affinidi-did-resolver-cache-sdk = { version = "0.5.4", path = "crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk", features = [
   "network",
 ] }
-affinidi-did-resolver-cache-server = { version = "0.5.3", path = "crates/affinidi-did-resolver/affinidi-did-resolver-cache-server" }
-did-example = { version = "0.5.2", path = "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-example" }
-did-peer = { version = "0.6.1", path = "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-peer" }
-affinidi-meeting-place = { version = "0.1.9", path = "./crates/affinidi-meeting-place" }
-affinidi-messaging-didcomm = { version = "0.10.7", path = "./crates/affinidi-messaging/affinidi-messaging-didcomm" }
+affinidi-did-resolver-cache-server = { version = "0.5.4", path = "crates/affinidi-did-resolver/affinidi-did-resolver-cache-server" }
+did-example = { version = "0.5.3", path = "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-example" }
+did-peer = { version = "0.6.2", path = "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-peer" }
+did-webvh = { version = "0.1.0", path = "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh" }
+affinidi-meeting-place = { version = "0.1.10", path = "./crates/affinidi-meeting-place" }
+affinidi-messaging-didcomm = { version = "0.10.8", path = "./crates/affinidi-messaging/affinidi-messaging-didcomm" }
 affinidi-messaging-helpers = { version = "0.10.7", path = "./crates/affinidi-messaging/affinidi-messaging-helpers" }
 affinidi-messaging-mediator = { version = "0.10.8", path = "./crates/affinidi-messaging/affinidi-messaging-mediator" }
-affinidi-messaging-mediator-common = { version = "0.10.7", path = "./crates/affinidi-messaging/affinidi-messaging-mediator/affinidi-messaging-mediator-common" }
-affinidi-messaging-mediator-processors = { version = "0.10.6", path = "./crates/affinidi-messaging/affinidi-messaging-mediator/affinidi-messaging-mediator-processors" }
-affinidi-messaging-sdk = { version = "0.11.1", path = "./crates/affinidi-messaging/affinidi-messaging-sdk" }
-affinidi-messaging-text-client = { version = "0.10.7", path = "./crates/affinidi-messaging/affinidi-messaging-text-client" }
-affinidi-tdk = { version = "0.1.11", path = "./crates/affinidi-tdk/affinidi-tdk" }
-affinidi-did-authentication = { version = "0.1.9", path = "./crates/affinidi-tdk/common/affinidi-did-authentication" }
-affinidi-secrets-resolver = { version = "0.1.8", path = "./crates/affinidi-tdk/common/affinidi-secrets-resolver" }
-affinidi-tdk-common = { version = "0.1.11", path = "./crates/affinidi-tdk/common/affinidi-tdk-common" }
+affinidi-messaging-mediator-common = { version = "0.10.8", path = "./crates/affinidi-messaging/affinidi-messaging-mediator/affinidi-messaging-mediator-common" }
+affinidi-messaging-mediator-processors = { version = "0.10.7", path = "./crates/affinidi-messaging/affinidi-messaging-mediator/affinidi-messaging-mediator-processors" }
+affinidi-messaging-sdk = { version = "0.11.2", path = "./crates/affinidi-messaging/affinidi-messaging-sdk" }
+affinidi-messaging-text-client = { version = "0.10.8", path = "./crates/affinidi-messaging/affinidi-messaging-text-client" }
+affinidi-tdk = { version = "0.1.12", path = "./crates/affinidi-tdk/affinidi-tdk" }
+affinidi-data-integrity = { version = "0.1.0", path = "./crates/affinidi-tdk/common/affinidi-data-integrity" }
+affinidi-did-authentication = { version = "0.1.10", path = "./crates/affinidi-tdk/common/affinidi-did-authentication" }
+affinidi-secrets-resolver = { version = "0.1.9", path = "./crates/affinidi-tdk/common/affinidi-secrets-resolver" }
+affinidi-tdk-common = { version = "0.1.12", path = "./crates/affinidi-tdk/common/affinidi-tdk-common" }
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
