--- a/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "affinidi-secrets-resolver"
 description = "Common utilities for Affinidi Trust Development Kit."
-version = "0.1.8"
+version = "0.1.9"
 edition.workspace = true
 authors.workspace = true
 readme.workspace = true
@@ -14,12 +14,15 @@ rust-version.workspace = true
 
 [dependencies]
 ahash = "0.8"
+base64 = "0.22"
+multibase = "0.9"
+multihash = "0.19"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
-ssi = { version = "0.10" }
+ssi = { version = "0.11" }
 thiserror = "2.0"
-tokio = { version = "1.44", features = ["full"] }
+tokio = { version = "1.45", features = ["full"] }
 tracing = { version = "0.1", features = [
-    "max_level_debug",
-    "release_max_level_info",
+  "max_level_debug",
+  "release_max_level_info",
 ] }
