--- a/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "affinidi-secrets-resolver"
 description = "Common utilities for Affinidi Trust Development Kit."
-version = "0.1.9"
+version = "0.1.10"
 edition.workspace = true
 authors.workspace = true
 readme.workspace = true
@@ -19,6 +19,7 @@ multibase = "0.9"
 multihash = "0.19"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
+sha2 = "0.10"
 ssi = { version = "0.11" }
 thiserror = "2.0"
 tokio = { version = "1.45", features = ["full"] }
