--- a/crates/affinidi-tdk/common/affinidi-data-integrity/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-data-integrity/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "affinidi-data-integrity"
 description = "W3C Data Integrity Implementation"
-version = "0.1.0"
+version = "0.1.1"
 edition.workspace = true
 authors.workspace = true
 readme.workspace = true
@@ -14,6 +14,7 @@ rust-version.workspace = true
 
 [dependencies]
 affinidi-secrets-resolver.workspace = true
+
 chrono = { version = "0.4", features = ["serde"] }
 ed25519-dalek = "2.1"
 multibase = "0.9"
@@ -30,6 +31,7 @@ tracing = { version = "0.1", features = [
 
 [dev-dependencies]
 affinidi-tdk.workspace = true
+clap = { version = "4.5", features = ["derive"] }
 tokio = { version = "1.45", features = ["full"] }
 tracing-subscriber = { version = "0.3", features = [
   "env-filter",
