--- a/deny.toml
+++ b/deny.toml
@@ -1,7 +1,7 @@
 [advisories]
 version = 2
 ignore = [
-    { id = "RUSTSEC-2022-0092", reason = "askalono always provides valid utf-8 files from a cache, this is not relevant" },
+  { id = "RUSTSEC-2022-0092", reason = "askalono always provides valid utf-8 files from a cache, this is not relevant" },
 ]
 
 [bans]
@@ -11,69 +11,123 @@ multiple-versions = "allow"
 # We want really high confidence when inferring licenses from text
 confidence-threshold = 0.93
 allow = [
-    "Apache-2.0",
-    "BSL-1.0",
-    "BSD-1-Clause",
-    "BSD-2-Clause",
-    "BSD-3-Clause",
-    "0BSD",
-    "CC0-1.0",
-    "ISC",
-    "MIT-0",
-    "MIT",
-    "NCSA",
-    "Unlicense",
-    "Zlib",
-# As stated here https://embarkstudios.github.io/cargo-deny/checks/licenses/cfg.html#spdx-identifiers
-# 3.11 versions of SPDX License List was used and below licenses are not included there.
-# They are commented to avoid "[license-not-encountered]" warnings.
-#    "Apache-1.1",
-#    "WTFPL",
-#    "Fair",
-#    "Intel",
-#    "MIT-Modern-Variant",
-#    "MulanPSL-2.0",
-#    "Multics",
-#    "Naumen",
-#    "PHP-3.01",
-#    "PostgreSQL",
-#    "Python-2.0",
-#    "OFL-1.1",
-#    "MirOS",
-#    "UPL-1.0",
-#    "Unicode-DFS-2016",
-#    "AFL-2.1",
+  "Apache-2.0",
+  "BSL-1.0",
+  "BSD-1-Clause",
+  "BSD-2-Clause",
+  "BSD-3-Clause",
+  "0BSD",
+  "CC0-1.0",
+  "ISC",
+  "MIT-0",
+  "MIT",
+  "NCSA",
+  "Unlicense",
+  "Zlib",
+  # As stated here https://embarkstudios.github.io/cargo-deny/checks/licenses/cfg.html#spdx-identifiers
+  # 3.11 versions of SPDX License List was used and below licenses are not included there.
+  # They are commented to avoid "[license-not-encountered]" warnings.
+  #    "Apache-1.1",
+  #    "WTFPL",
+  #    "Fair",
+  #    "Intel",
+  #    "MIT-Modern-Variant",
+  #    "MulanPSL-2.0",
+  #    "Multics",
+  #    "Naumen",
+  #    "PHP-3.01",
+  #    "PostgreSQL",
+  #    "Python-2.0",
+  #    "OFL-1.1",
+  #    "MirOS",
+  #    "UPL-1.0",
+  #    "Unicode-DFS-2016",
+  #    "AFL-2.1",
 ]
 
 exceptions = [
-    { allow = ["OpenSSL"], crate = "aws-lc-sys" },
-    { allow = ["MPL-2.0"], crate = "bitmaps" },
-    { allow = ["MPL-2.0"], crate = "im" },
-    { allow = ["MPL-2.0"], crate = "webpki-roots" },
-    { allow = ["MPL-2.0"], crate = "webpki-root-certs" },
-    { allow = ["CC-BY-SA-3.0", "MPL-2.0"], crate = "sized-chunks" },
-    # TODO: align
-    { allow = ["Unicode-3.0"], crate = "icu_collections" },
-    { allow = ["Unicode-3.0"], crate = "icu_locid" },
-    { allow = ["Unicode-3.0"], crate = "icu_locid_transform" },
-    { allow = ["Unicode-3.0"], crate = "icu_locid_transform_data" },
-    { allow = ["Unicode-3.0"], crate = "icu_normalizer" },
-    { allow = ["Unicode-3.0"], crate = "icu_normalizer_data" },
-    { allow = ["Unicode-3.0"], crate = "icu_properties" },
-    { allow = ["Unicode-3.0"], crate = "icu_properties_data" },
-    { allow = ["Unicode-3.0"], crate = "icu_provider" },
-    { allow = ["Unicode-3.0"], crate = "icu_provider_macros" },
-    { allow = ["Unicode-3.0"], crate = "litemap" },
-    { allow = ["Apache-2.0 WITH LLVM-exception", "Unicode-3.0"], crate = "target-lexicon" },
-    { allow = ["Unicode-3.0"], crate = "tinystr" },
-    { allow = ["Unicode-3.0"], crate = "unicode-ident" },
-    { allow = ["Unicode-3.0"], crate = "writeable" },
-    { allow = ["Unicode-3.0"], crate = "yoke" },
-    { allow = ["Unicode-3.0"], crate = "yoke-derive" },
-    { allow = ["Unicode-3.0"], crate = "zerofrom" },
-    { allow = ["Unicode-3.0"], crate = "zerofrom-derive" },
-    { allow = ["Unicode-3.0"], crate = "zerovec" },
-    { allow = ["Unicode-3.0"], crate = "zerovec-derive" },
+  # changed from: { allow = ["MPL-2.0"], crate = "webpki-root-certs" },
+  { allow = [
+    "CDLA-Permissive-2.0",
+  ], crate = "webpki-root-certs" },
+  { allow = [
+    "OpenSSL",
+  ], crate = "aws-lc-sys" },
+  { allow = [
+    "MPL-2.0",
+  ], crate = "bitmaps" },
+  { allow = [
+    "MPL-2.0",
+  ], crate = "im" },
+  { allow = [
+    "MPL-2.0",
+  ], crate = "webpki-roots" },
+  { allow = [
+    "CC-BY-SA-3.0",
+    "MPL-2.0",
+  ], crate = "sized-chunks" },
+  # TODO: align
+  { allow = [
+    "Unicode-3.0",
+  ], crate = "icu_collections" },
+  { allow = [
+    "Unicode-3.0",
+  ], crate = "icu_locale_core" },
+  { allow = [
+    "Unicode-3.0",
+  ], crate = "icu_normalizer" },
+  { allow = [
+    "Unicode-3.0",
+  ], crate = "icu_normalizer_data" },
+  { allow = [
+    "Unicode-3.0",
+  ], crate = "icu_properties" },
+  { allow = [
+    "Unicode-3.0",
+  ], crate = "icu_properties_data" },
+  { allow = [
+    "Unicode-3.0",
+  ], crate = "icu_provider" },
+  { allow = [
+    "Unicode-3.0",
+  ], crate = "litemap" },
+  { allow = [
+    "Unicode-3.0",
+  ], crate = "potential_utf" },
+  { allow = [
+    "Apache-2.0 WITH LLVM-exception",
+    "Unicode-3.0",
+  ], crate = "target-lexicon" },
+  { allow = [
+    "Unicode-3.0",
+  ], crate = "tinystr" },
+  { allow = [
+    "Unicode-3.0",
+  ], crate = "unicode-ident" },
+  { allow = [
+    "Unicode-3.0",
+  ], crate = "writeable" },
+  { allow = [
+    "Unicode-3.0",
+  ], crate = "yoke" },
+  { allow = [
+    "Unicode-3.0",
+  ], crate = "yoke-derive" },
+  { allow = [
+    "Unicode-3.0",
+  ], crate = "zerofrom" },
+  { allow = [
+    "Unicode-3.0",
+  ], crate = "zerofrom-derive" },
+  { allow = [
+    "Unicode-3.0",
+  ], crate = "zerotrie" },
+  { allow = [
+    "Unicode-3.0",
+  ], crate = "zerovec" },
+  { allow = [
+    "Unicode-3.0",
+  ], crate = "zerovec-derive" },
 ]
 
 # Sigh
