--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
@@ -5,7 +5,7 @@ description = "Implementation of the did:webvh method in Rust, uses the ssi crat
 repository.workspace = true
 edition.workspace = true
 authors.workspace = true
-homepage = "README.md"
+homepage.workspace = true
 keywords.workspace = true
 publish.workspace = true
 license.workspace = true
