--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "did-webvh"
-version = "0.1.5"
+version = "0.1.6"
 description = "Implementation of the did:webvh method in Rust, uses the ssi crate"
 repository.workspace = true
 edition.workspace = true
@@ -42,9 +42,10 @@ url = "2.5"
 affinidi-tdk.workspace = true
 
 anyhow = "1.0"
-console = "0.15"
+console = "0.16"
 dialoguer = "0.11"
 iref = { version = "3.2.2", features = ["serde"] }
+rand = "0.9"
 tokio = { version = "1.45", features = ["full"] }
 tracing-subscriber = { version = "0.3", features = [
   "env-filter",
