--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
@@ -25,6 +25,7 @@ base58 = "0.2.0"
 chrono = { version = "0.4", features = ["serde"] }
 multibase = "0.9"
 multihash = "0.19"
+regex = "1.11"
 reqwest = "0.12"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
@@ -47,7 +48,7 @@ console = "0.16"
 dialoguer = "0.11"
 iref = { version = "3.2.2", features = ["serde"] }
 rand = "0.9"
-tokio = { version = "1.45", features = ["full"] }
+tokio = { version = "1.46", features = ["full"] }
 tracing-subscriber = { version = "0.3", features = [
   "env-filter",
   "fmt",
