--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
@@ -16,7 +16,6 @@ rust-version.workspace = true
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-# cannot use workspace due to cyclic dependencies
 affinidi-data-integrity.workspace = true
 affinidi-secrets-resolver.workspace = true
 
@@ -25,7 +24,6 @@ base58 = "0.2.0"
 chrono = { version = "0.4", features = ["serde"] }
 multibase = "0.9"
 multihash = "0.19"
-regex = "1.11"
 reqwest = "0.12"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
@@ -44,6 +42,7 @@ url = "2.5"
 affinidi-tdk.workspace = true
 
 anyhow = "1.0"
+clap = { version = "4.5", features = ["derive"] }
 console = "0.16"
 dialoguer = "0.11"
 iref = { version = "3.2.2", features = ["serde"] }
