--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "did-webvh"
-version = "0.1.5"
+version = "0.1.6"
 description = "Implementation of the did:webvh method in Rust, uses the ssi crate"
 repository.workspace = true
 edition.workspace = true
@@ -16,11 +16,11 @@ rust-version.workspace = true
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-# cannot use workspace due to cyclic dependencies
 affinidi-data-integrity.workspace = true
 affinidi-secrets-resolver.workspace = true
 
 ahash = { version = "0.8", features = ["serde"] }
+base58 = "0.2.0"
 chrono = { version = "0.4", features = ["serde"] }
 multibase = "0.9"
 multihash = "0.19"
@@ -28,7 +28,7 @@ reqwest = "0.12"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 serde_json_canonicalizer = "0.3.0"
-serde_with = "3.13"
+serde_with = "3.14"
 sha2 = "0.10"
 ssi = { version = "0.12", features = ["secp384r1"] }
 thiserror = "2.0"
@@ -42,10 +42,12 @@ url = "2.5"
 affinidi-tdk.workspace = true
 
 anyhow = "1.0"
-console = "0.15"
+clap = { version = "4.5", features = ["derive"] }
+console = "0.16"
 dialoguer = "0.11"
 iref = { version = "3.2.2", features = ["serde"] }
-tokio = { version = "1.45", features = ["full"] }
+rand = "0.9"
+tokio = { version = "1.46", features = ["full"] }
 tracing-subscriber = { version = "0.3", features = [
   "env-filter",
   "fmt",
