--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
@@ -22,6 +22,8 @@ affinidi-secrets-resolver.workspace = true
 ahash = { version = "0.8", features = ["serde"] }
 base58 = "0.2.0"
 chrono = { version = "0.4", features = ["serde"] }
+iref = { version = "3.2.2", features = ["serde"] }
+static-iref = "3.0.0"
 multibase = "0.9"
 multihash = "0.19"
 reqwest = "0.12"
