--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
@@ -45,9 +45,11 @@ url = "2.5"
 affinidi-tdk.workspace = true
 
 anyhow = "1.0"
+byte-unit = "5.1.6"
 clap = { version = "4.5", features = ["derive"] }
 console = "0.16"
 dialoguer = "0.11"
+format_num = "0.1.0"
 iref = { version = "3.2.2", features = ["serde"] }
 rand = "0.9"
 tracing-subscriber = { version = "0.3", features = [
