--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,11 +3,11 @@ name: "release"
 on:
   push:
     branches:
-      - main
+      - test/rust-security-scanner
 
 jobs:
   rust-pipeline:
-    uses: affinidi/pipeline-rust/.github/workflows/release.yaml@main
+    uses: affinidi/pipeline-rust/.github/workflows/release.yaml@feat/rust-security-scanner
     secrets: inherit
     with:
       rustflags: "-D warnings --cfg tracing_unstable"
