--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "did-webvh"
-version = "0.1.6"
+version = "0.1.7"
 description = "Implementation of the did:webvh method in Rust, uses the ssi crate"
 repository.workspace = true
 edition.workspace = true
@@ -22,7 +22,7 @@ affinidi-secrets-resolver.workspace = true
 ahash = { version = "0.8", features = ["serde"] }
 base58 = "0.2.0"
 chrono = { version = "0.4", features = ["serde"] }
-multibase = "0.9"
+iref = { version = "3.2.2", features = ["serde"] }
 multihash = "0.19"
 reqwest = "0.12"
 serde = { version = "1.0", features = ["derive", "rc"] }
@@ -32,6 +32,7 @@ serde_with = "3.14"
 sha2 = "0.10"
 ssi = { version = "0.12", features = ["secp384r1"] }
 thiserror = "2.0"
+tokio = { version = "1.47", features = ["full"] }
 tracing = { version = "0.1", features = [
   "max_level_debug",
   "release_max_level_info",
@@ -42,12 +43,13 @@ url = "2.5"
 affinidi-tdk.workspace = true
 
 anyhow = "1.0"
+byte-unit = "5.1.6"
 clap = { version = "4.5", features = ["derive"] }
 console = "0.16"
 dialoguer = "0.11"
+format_num = "0.1.0"
 iref = { version = "3.2.2", features = ["serde"] }
 rand = "0.9"
-tokio = { version = "1.46", features = ["full"] }
 tracing-subscriber = { version = "0.3", features = [
   "env-filter",
   "fmt",
