--- a/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "affinidi-did-resolver-cache-sdk"
-version = "0.5.5"
+version = "0.5.6"
 description = "Affinidi DID Resolver SDK"
 edition.workspace = true
 authors.workspace = true
@@ -32,12 +32,12 @@ did_example = ["dep:did-example"]
 [dependencies]
 # Affinidi Crates
 did-peer.workspace = true
-did-webvh.workspace = true
 did-example = { workspace = true, optional = true }
 
 # External Crates
 ahash = "0.8"
 base64 = { version = "0.22", optional = true }
+didwebvh-rs = "0.1"
 futures-util = "0.3"
 highway = "1.3.0"
 moka = { version = "0.12", features = ["future"] }
@@ -53,7 +53,7 @@ serde-wasm-bindgen = "0.6.5"
 sha1 = { version = "0.10", optional = true }
 ssi = { version = "0.12", features = ["secp384r1"] }
 thiserror = "2.0"
-tokio = { version = "1.45", features = ["full"] }
+tokio = { version = "1.47", features = ["full"] }
 tokio-rustls = { version = "0.26", optional = true }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
@@ -66,4 +66,4 @@ web-socket = { version = "0.7", optional = true }
 clap = { version = "4.5", features = ["derive"] }
 num-format = "0.4.4"
 number_prefix = "0.4"
-rayon = "1.10"
+rayon = "1.11"
