--- a/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "affinidi-secrets-resolver"
 description = "Common utilities for Affinidi Trust Development Kit."
-version = "0.1.12"
+version = "0.1.13"
 edition.workspace = true
 authors.workspace = true
 readme = "README.md"
@@ -14,6 +14,7 @@ rust-version.workspace = true
 
 [dependencies]
 ahash = "0.8"
+askar-crypto = "0.3.6"
 base58 = "0.2"
 base64 = "0.22"
 multibase = "0.9"
@@ -23,7 +24,7 @@ serde_json = "1.0"
 sha2 = "0.10"
 ssi = { version = "0.12" }
 thiserror = "2.0"
-tokio = { version = "1.46", features = ["full"] }
+tokio = { version = "1.47", features = ["full"] }
 tracing = { version = "0.1", features = [
   "max_level_debug",
   "release_max_level_info",
