--- a/crates/affinidi-messaging/affinidi-messaging-text-client/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-text-client/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "affinidi-messaging-text-client"
-version = "0.10.8"
+version = "0.10.9"
 description = "Affinidi Messaging SDK"
 edition.workspace = true
 authors.workspace = true
@@ -26,7 +26,8 @@ anyhow = '1.0'
 base64 = "0.22"
 chrono = "0.4"
 circular-queue = { version = "0.2", features = ["serde_support"] }
-crossterm = { version = "0.29", features = ["event-stream"] }
+# Crossterm must match the version used in ratatui
+crossterm = { version = "0.28", features = ["event-stream"] }
 image = "0.25"
 log = "0.4"
 qrcode = "0.14"
@@ -39,7 +40,7 @@ serde_json = "1.0"
 sha256 = "1.6"
 ssi = { version = "0.12" }
 textwrap = "0.16"
-tokio = { version = "1.45", features = ["full"] }
+tokio = { version = "1.47", features = ["full"] }
 tokio-stream = "0.1"
 tracing = { version = "0.1", features = [
   "max_level_debug",
@@ -52,6 +53,6 @@ tracing-subscriber = { version = "0.3", features = [
   "json",
   "valuable",
 ] }
-tui-input = "0.12"
+tui-input = { version = "0.14", features = ["ratatui-crossterm"] }
 tui-logger = { version = "0.17", features = ["tracing-support"] }
-uuid = { version = "1.17", features = ["v4", "fast-rng"] }
+uuid = { version = "1.18", features = ["v4", "fast-rng"] }
