--- a/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
@@ -23,6 +23,12 @@ serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 sha2 = "0.10"
 # ssi = { version = "0.12" }
+tokio = { version = "1.47", features = ["macros", "rt", "sync", "time"] }
+tracing = { version = "0.1", features = [
+  "max_level_debug",
+  "release_max_level_info",
+] }
+zeroize = "1.8"
 ssi-multicodec = { version = "0.2", features = [
   "ed25519",
   "k256",
@@ -30,9 +36,3 @@ ssi-multicodec = { version = "0.2", features = [
   "p384",
 ] }
 thiserror = "2.0"
-tokio = { version = "1.47" }
-tracing = { version = "0.1", features = [
-  "max_level_debug",
-  "release_max_level_info",
-] }
-zeroize = "1.8"
