--- a/crates/affinidi-tdk/common/affinidi-data-integrity/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-data-integrity/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "affinidi-data-integrity"
 description = "W3C Data Integrity Implementation"
-version = "0.2.0"
+version = "0.2.1"
 edition.workspace = true
 authors.workspace = true
 readme = "README.md"
@@ -16,13 +16,12 @@ rust-version.workspace = true
 affinidi-secrets-resolver.workspace = true
 
 chrono = { version = "0.4", features = ["serde"] }
-ed25519-dalek = "2.1"
+ed25519-dalek = "2.2"
 multibase = "0.9"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
-serde_json_canonicalizer = "0.3.0"
+serde_json_canonicalizer = "0.3"
 sha2 = "0.10"
-ssi = "0.12"
 thiserror = "2.0"
 tracing = { version = "0.1", features = [
   "max_level_debug",
@@ -31,7 +30,7 @@ tracing = { version = "0.1", features = [
 
 [dev-dependencies]
 clap = { version = "4.5", features = ["derive"] }
-tokio = { version = "1.46", features = ["full"] }
+tokio = { version = "1.47" }
 tracing-subscriber = { version = "0.3", features = [
   "env-filter",
   "fmt",
