--- a/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "affinidi-secrets-resolver"
 description = "Common utilities for Affinidi Trust Development Kit."
-version = "0.1.15"
+version = "0.1.16"
 edition.workspace = true
 authors.workspace = true
 readme = "README.md"
@@ -17,8 +17,10 @@ ahash = "0.8"
 askar-crypto = "0.3.6"
 base58 = "0.2"
 base64 = "0.22"
+ed25519-dalek = { version = "2.2", features = ["rand_core"] }
 multibase = "0.9"
 multihash = "0.19"
+rand = "0.8"                                                  # Version conflict because of ed25519-dalek
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 sha2 = "0.10"
