--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-example/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-example/Cargo.toml
@@ -18,5 +18,5 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 ahash = "0.8"
 # ssi = { version = "0.12", features = ["secp384r1"] }
-ssi = { path = "https://github.com/stormer78/ssi", features = ["secp384r1"] }
+ssi = { git = "https://github.com/stormer78/ssi", features = ["secp384r1"] }
 thiserror = "2.0"
