--- a/crates/affinidi-messaging/affinidi-messaging-didcomm/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-didcomm/Cargo.toml
@@ -31,7 +31,7 @@ serde_json = "1.0"
 sha2 = "0.10"
 sha256 = "1.6"
 # ssi = { version = "0.12" }
-ssi = { path = "https://github.com/stormer78/ssi" }
+ssi = { git = "https://github.com/stormer78/ssi" }
 thiserror = "2.0"
 varint = "0.9"
 tokio = { version = "1.47", features = ["rt", "macros"] }
