--- a/crates/affinidi-messaging/affinidi-messaging-helpers/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-helpers/Cargo.toml
@@ -46,7 +46,7 @@ serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 sha256 = "1.6"
 # ssi = { version = "0.12" }
-ssi = { path = "https://github.com/stormer78/ssi" }
+ssi = { git = "https://github.com/stormer78/ssi" }
 time = "0.3"
 tokio = { version = "1.47", features = ["full"] }
 toml = "0.9"
