--- a/crates/affinidi-tdk/affinidi-tdk/Cargo.toml
+++ b/crates/affinidi-tdk/affinidi-tdk/Cargo.toml
@@ -36,7 +36,7 @@ rustls = { version = "0.23", default-features = false, features = [
 ] }
 serde_json = "1.0"
 # ssi = { version = "0.12" }
-ssi = { path = "https://github.com/stormer78/ssi" }
+ssi = { git = "https://github.com/stormer78/ssi" }
 tokio = { version = "1.47", features = ["full"] }
 tracing = { version = "0.1", features = [
   "max_level_debug",
