--- a/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
@@ -14,7 +14,6 @@ rust-version.workspace = true
 
 [dependencies]
 ahash = "0.8"
-# askar-crypto = "0.3.6"
 base58 = "0.2"
 base64 = "0.22"
 ed25519-dalek = { version = "2.2", features = ["rand_core"] }
@@ -29,13 +28,8 @@ tracing = { version = "0.1", features = [
   "max_level_debug",
   "release_max_level_info",
 ] }
-ssi-multicodec = { version = "0.2", features = [
-  "ed25519",
-  "k256",
-  "p256",
-  "p384",
-] }
 thiserror = "2.0"
+unsigned-varint = "0.8"
 x25519-dalek = { version = "2.0", features = ["static_secrets"] }
 zeroize = "1.8"
 
