--- a/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
@@ -31,6 +31,7 @@ did_example = ["dep:did-example"]
 
 [dependencies]
 # Affinidi Crates
+affinidi-did-common.workspace = true
 did-peer.workspace = true
 did-example = { workspace = true, optional = true }
 
@@ -51,8 +52,7 @@ serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 serde-wasm-bindgen = "0.6.5"
 sha1 = { version = "0.10", optional = true }
-# ssi = { version = "0.12", features = ["secp384r1"] }
-ssi-dids = { version = "0.2", features = ["secp384r1"] }
+ssi = { git = "https://github.com/stormer78/ssi", features = ["secp384r1"] }
 thiserror = "2.0"
 tokio = { version = "1.47", features = ["full"] }
 tokio-rustls = { version = "0.26", optional = true }
